<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<resources>
  <string name="app_name" translatable="false">Tooka</string>
  <string name="app_name_translatable">Tooka</string>
  <string name="home">Home</string>
  <string name="markets">Markets</string>
  <string name="portfolio">Portfolio</string>
  <string name="news">News</string>
  <string name="settings">Settings</string>
  <string name="search">Search</string>
  <string name="notifications">Notifications</string>
  <string name="important_news">Important News</string>
  <string name="toomans">Toomans</string>
  <string name="dollars">Dollars</string>
  <string name="gainers_losers">Gainers &amp; Losers</string>
  <string name="watchlist">Watchlist</string>
  <string name="converter">Converter</string>
  <string name="compare">Compare</string>
  <string name="sort_by">Sort by</string>
  <string name="market_cap">Market Cap</string>
  <string name="price">Price</string>
  <string name="volume">Volume</string>
  <string name="add_crypto">Add Crypto</string>
  <string name="manual">Manual</string>
  <string name="automatic">Automatic</string>
  <string name="automatic_add_subtitle">The app connects to your digital wallet and computes your gains and losses</string>
  <string name="manual_add_subtitle">You add your coins here and there is no need to connect your wallet</string>
  <string name="breaking_news">Breaking News</string>
  <string name="see_more">See More</string>
  <string name="crypto_news">Crypto News</string>
  <string name="app_settings">App Settings</string>
  <string name="app_main_theme">App Theme</string>
  <string name="light">Light</string>
  <string name="dark">Dark</string>
  <string name="customize_home_page">Customize Home Page</string>
  <string name="user_settings">User Settings</string>
  <string name="about_us">About Us</string>
  <string name="tooka_website">Tooka Website</string>
  <string name="contact_support">Contact Support</string>
  <string name="dismiss">Dismiss</string>
  <string name="written_by">Written by</string>
  <string name="bullet" translatable="false">•</string>
  <string name="share">Share</string>
  <string name="favorite">Favorite</string>
  <string name="details">Details</string>
  <string name="price_alert">Price Alert</string>
  <string name="technical_analysis">Technical Analysis</string>
  <string name="area">Area</string>
  <string name="candlestick">Candlestick</string>
  <string name="h_24" translatable="false">24 H</string>
  <string name="w_1" translatable="false">1 W</string>
  <string name="m_1" translatable="false">1 M</string>
  <string name="m_3" translatable="false">3 M</string>
  <string name="y_1" translatable="false">1 Y</string>
  <string name="all" translatable="false">All</string>
  <string name="stats">Statistics</string>
  <string name="circulating_supply">Circulating Supply</string>
  <string name="total_supply">Total Supply</string>
  <string name="rank">Rank</string>
  <string name="vol_24">24 H Volume</string>
  <string name="max_supply">Max Supply</string>
  <string name="roi">ROI</string>
  <string name="portfolio_capital">Portfolio Capital</string>
  <string name="my_capital">My Capital</string>
  <string name="related_coins">Related Coins</string>
  <string name="related_news">Related News</string>
  <string name="send_to">Send To...</string>
  <string name="news_related_to">News Related To</string>
  <string name="other_coins">Other Coins</string>
  <string name="add_to_portfolio">Add To Portfolio</string>
  <string name="amout_of_crypto_bought">Amount Bought</string>
  <string name="amount_of_crypto_sold">Amount Sold</string>
  <string name="crypto">Crypto Currency</string>
  <string name="crypto_bought">Crypto Bought</string>
  <string name="buy">Buy</string>
  <string name="sell">Sell</string>
  <string name="crypto_sold">Crypto Sold</string>
  <string name="wallets_registered">Wallets Registered</string>
  <string name="wallet_address">Wallet Address</string>
  <string name="no_data">No Data</string>
  <string name="add_alert">Add Price Alert</string>
  <string name="higher">Higher</string>
  <string name="lower">Lower</string>
  <string name="minutes">Minute(s)</string>
  <string name="usd" translatable="false">USD</string>
  <string name="irt" translatable="false">IRT</string>
  <string name="open">Open</string>
  <string name="high">High</string>
  <string name="low">Low</string>
  <string name="close">Close</string>
  <string name="select_coin_compare">Select coin to compare</string>
  <string name="choose_coin">Choose crypto</string>
  <string name="choose_platform">Choose Platform</string>
  <string name="search_here">Search Here</string>
  <string name="retry">Retry</string>
  <string name="network_error_desc">Network connection may be down. Please check your internet connection</string>
  <string name="network_error_title">Network Error</string>
  <string name="unknown_error_title">Unknown Error</string>
  <string name="unknown_error_desc">An unknown error has occured. Please be patient and wait for our support team to contact you</string>
  <string name="server_error_title">Tooka is not responding</string>
  <string name="server_error_desc">Tooka is currently not accepting any calls from you. Please be patient and try again in a couple of minutes</string>
  <string name="login_or_signup">Login or Signup</string>
  <string name="submit">Submit</string>
  <string name="login_with_google">Log in with Google</string>
  <string name="phone_number">Phone number</string>
  <string name="verification_code">Verification code</string>
  <string name="user_database_error">An unexpected error occured, please try again in a few moments</string>
  <string name="sms_not_sent">Sms was not sent, please try again in a few moments</string>
  <string name="invalid_verification_code">Provided verification code is incorrect, enter the correct code</string>
  <string name="alerts">Price Alerts</string>
  <string name="alert_not_found">Specified alert was not found</string>
  <string name="alert_submitted">Alert added successfully</string>
  <string name="coin_not_found">Specified coin was not found</string>
  <string name="alert_not_saved">Alert was not saved, please try again</string>
  <string name="login_success">You successfully logged in</string>
  <string name="google_login_failed_unknown">Google login failed with unknown issue</string>
  <string name="user_info_not_found">User information was not found, please try again</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="do_you_confirm">Do you confirm?</string>
  <string name="phone_number_confirm_1">Are you sure that you want to use</string>
  <string name="phone_number_confirm_2">to login to Tooka?</string>
  <string name="user_confirms_phone">I\'m sure</string>
  <string name="user_doesnt_confirm_phone">No, change it</string>
  <string name="welcome_title">Dear user,\nWelcome to Tooka :)</string>
  <string name="welcome_desc">Enter your number and enjoy Tooka\'s amazing trading tips and tools :)</string>
  <string name="or">Or</string>
  <string name="verify_your_number">Verify your number</string>
  <string name="verify_your_number_desc">Please wait while Tooka identifies the text message containing your verification code...</string>
  <string name="enter_code_manually">You can enter the code yourself</string>
  <string name="resend_sms">Resend SMS</string>
  <string name="code_too_early_to_send">5 minutes should pass before requesting for a new code</string>
  <string name="code_was_resent">Verification code was sent to your phone</string>
  <string name="platform">Platform</string>
  <string name="select_coin">Select a coin</string>
  <string name="specify_capital">Specify capital</string>
  <string name="specify_platform">Specify a platform</string>
  <string name="specify_wallet">Enter your wallet address</string>
  <string name="no_watchlist">You don\'t have any coins in your watchlist :(</string>
  <string name="add_to_watchlist">Add to your watchlist</string>
  <string name="scan_qr">Wallet QR code</string>
  <string name="change_lang">Change Language</string>
  <string name="persian">فارسی</string>
  <string name="english">English</string>
  <string name="lang_change_message">Language will change the next time you enter the app</string>
  <string name="below">Below</string>
  <string name="above">Above</string>
  <string name="invalid_args">Data supplied was not valid</string>
  <string name="wallet_not_found">Wallet address was not valid</string>
  <string name="empty_portfolio">Your portfolio is empty. Please add some coins</string>
  <string name="not_logged_in">You are not logged in, please submit your login via the Settings page</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="lang_change_restart">Changing the language requires the app to close. After opening it again you will see your preferred language set. Do you want to continue?</string>
  <string name="add_watchlist">Add Watchlist</string>
  <string name="add_watchlist_not_saved">Your coin was not added to watchlist, please try again later</string>
  <string name="your_wallets">Your Wallets</string>
  <string name="no_wallets">You haven\'t registered any wallets yet! Add them via automatic coin insertion</string>
  <string name="please_wait">Please Wait</string>
  <string name="loading_wallets">We are loading your wallets...</string>
  <string name="grid_view">Grid View</string>
  <string name="linear_view">Linear View</string>
  <string name="history">History</string>
  <string name="wallet_empty_or_hard">Your wallet is either empty or is a hard wallet which Tooka does not support</string>
  <string name="camera_denied">Tooka needs camera permission to scan QR codes, you can allow it in your settings app</string>
  <string name="no_watchlist_content">You can add coins to watchlist in Markets section</string>
  <string name="nothing_here">There is nothing here :(</string>
  <string name="theme_change_content">Changing the theme requires the app the close. Do you wish to continue?</string>


</resources>
