<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:text="@string/stats"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="@style/TextAppearance.MyTheme.ToolbarTitle"
    android:layout_marginStart="@dimen/margin16" />

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin8"
    android:layout_marginBottom="@dimen/margin8">

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginStart="@dimen/margin16">

      <TextView
        android:text="@string/market_cap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMarketCap"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <TextView
        android:text="@string/circulating_supply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin8" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCircSupply"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <TextView
        android:text="@string/total_supply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin8" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTotalSupply"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <TextView
        android:text="@string/rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin8" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRank"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

    </LinearLayout>

    <ImageView
      android:layout_width="1dp"
      android:layout_height="match_parent"
      app:srcCompat="@drawable/divider_gradient" />

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:layout_marginEnd="@dimen/margin16"
      android:layout_marginStart="@dimen/margin8">

      <TextView
        android:text="@string/vol_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt24HVolume"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <TextView
        android:text="@string/max_supply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin8" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMaxSupply"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <TextView
        android:text="@string/roi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price2"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/margin8" />

      <TextView
        android:text="32.3 B $"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtROI"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

    </LinearLayout>
  </LinearLayout>
</LinearLayout>