<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:id="@+id/miscRoot">

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
      android:id="@+id/converter"
      android:text="@string/converter"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textColor="?colorOnSurface"
      android:backgroundTint="?colorSurface"
      android:drawablePadding="@dimen/margin8"
      app:icon="@drawable/ic_currency_exchange_black_24dp"
      app:iconTint="?colorOnSurface"
      app:iconGravity="textStart"
      android:layout_marginStart="@dimen/margin8"
      android:layout_marginTop="@dimen/margin8"
      android:layout_marginBottom="@dimen/margin8"
      android:layout_marginEnd="@dimen/margin4" />

    <Button
      android:text="@string/compare"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/comparer"
      android:layout_weight="1"
      android:textColor="?colorOnSurface"
      android:backgroundTint="?colorSurface"
      android:drawablePadding="@dimen/margin8"
      app:icon="@drawable/ic_compare_arrows_black_24dp"
      app:iconTint="?colorOnSurface"
      app:iconGravity="textStart"
      android:layout_marginStart="@dimen/margin4"
      android:layout_marginEnd="@dimen/margin8"
      android:layout_marginTop="@dimen/margin8" />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
      android:id="@+id/alerts"
      android:text="@string/alerts"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:textColor="?colorOnSurface"
      android:backgroundTint="?colorSurface"
      android:drawablePadding="@dimen/margin8"
      app:icon="@drawable/ic_notifications_active_black_24dp"
      app:iconTint="?colorOnSurface"
      app:iconGravity="textStart"
      android:layout_marginStart="@dimen/margin8"
      android:layout_marginBottom="@dimen/margin8"
      android:layout_marginEnd="@dimen/margin4" />

    <Button
      android:text="@string/customize_home_page"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/customize"
      android:layout_weight="1"
      android:textColor="?colorOnSurface"
      android:backgroundTint="?colorSurface"
      android:drawablePadding="@dimen/margin8"
      app:icon="@drawable/ic_construction_black_24dp"
      app:iconTint="?colorOnSurface"
      app:iconGravity="textStart"
      android:layout_marginStart="@dimen/margin4"
      android:layout_marginEnd="@dimen/margin8"
      android:layout_marginBottom="@dimen/margin8" />
  </LinearLayout>
</LinearLayout>