<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/watchlistRoot">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin8"
    android:layout_marginTop="@dimen/margin8"
    android:layout_marginBottom="@dimen/margin8"
    android:text="@string/watchlist"
    android:textAppearance="@style/TextAppearance.MyTheme.Body1"
    android:id="@+id/watchlistTitle" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="112dp"
    android:id="@+id/watchlistSubRoot">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/watchlistList"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
      android:id="@+id/breakingNewsLoading"
      android:layout_width="@dimen/size64"
      android:layout_height="@dimen/size64"
      app:lottie_rawRes="@raw/loading"
      app:lottie_autoPlay="true"
      app:lottie_loop="true"
      app:lottie_speed="0.6"
      android:layout_centerInParent="true" />

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:id="@+id/noWatchlistRoot"
      android:visibility="gone">

      <TextView
        android:text="@string/no_watchlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MyTheme.Price1" />

      <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        app:cardElevation="@dimen/elev0"
        app:cardBackgroundColor="@color/blue_50">

        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="?selectableItemBackground"
          android:clickable="true"
          android:focusable="true"
          android:id="@+id/addWatchlist">

          <TextView
            android:text="@string/add_to_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginBottom="@dimen/margin8"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
            android:drawableStart="@drawable/ic_add"
            android:drawableTint="@color/dark_blue_900"
            android:drawablePadding="@dimen/margin8" />
        </LinearLayout>

      </androidx.cardview.widget.CardView>
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>